--- a/src/components/TopPanel/TopPanel.module.css
+++ b/src/components/TopPanel/TopPanel.module.css
@@ -13,8 +13,9 @@
 .buttonTheme {
   background-color: transparent;
   border: none;
-  width: 48px;
-  height: 48px;
+
+  padding: 10px 0;
+  margin-left: 8px;
 }
 
 .buttonTheme:hover {
