--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -8,10 +8,31 @@
   box-shadow: var(--botdeaux) 0px 4px 12px;
 }
 
+.logTitle {
+  margin-bottom: 15px;
+  text-align: center;
+}
+
 .buttonForm {
   display: inline-flex;
 
   padding: 10px 25px;
   border-radius: 5px;
   font-size: 15px;
+}
+
+.link {
+  margin-top: 20px;
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.linkreg {
+  color: inherit;
+  font-weight: 600;
+}
+
+.linkreg:hover {
+  color: var(--light-cardinal);
 }
